--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"electron-serve": "^2.0.0"
+	}
 }
